src/index.css
@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Sora:wght@100..800&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  /* --z-section-navbar: 10;
  --z-rounded-button: 20; */
  --z-progress-bar: 5;
  --z-model-info: 10;
  --z-model-loader: 20;
  --z-nav-content: 30;
  --z-nav-burger-button: 40;
  --z-loader-curve: 50;
  --z-loader-curve-content: 60;
}

body {
  font-family: "Sora", sans-serif;
}

html {
  overflow-y: auto;
  scrollbar-width: none;
}

html::-webkit-scrollbar {
  display: none;
}

@layer utilities {
  .max-container {
    @apply mx-auto p-4 sm:p-8 md:p-12 pb-12 !pt-[130px] min-h-[calc(100vh-80px)];
  }

  .blue-gradient_text {
    @apply bg-gradient-to-r from-[#63E5DF] to-[#8A64EB] bg-clip-text text-transparent;
  }

  .top-menu-item {
    @apply cursor-pointer py-1 hover:text-slate-950 relative after:absolute after:bottom-0 after:left-0 after:bg-underline after:h-0.5 after:w-0 hover:after:w-full after:transition-all after:ease-in-out after:duration-300;
  }

  .info-box {
    @apply mx-5 relative flex text-white flex-col gap-3 max-w-2xl neo-brutalism-blue pt-4 pb-12 px-8;
  }

  .neo-btn {
    @apply py-3 px-6 rounded-lg text-blue-500 text-center font-semibold sm:w-1/2 w-[90%] -bottom-5 absolute mx-auto right-0 left-0 flex justify-center items-center gap-3;
  }
}

/* Neo Brutalism */
.neo-brutalism-blue {
  background: #2b77e7;
  position: relative;
  border-radius: 10px;
  border: #2b77e7;
  box-shadow: 0.6vmin 0.6vmin #336cc1, 1vmin 1vmin #0092db, 1vmin 1vmin #0092db,
    0.65vmin 1vmin #0092db, 1vmin 0.65vmin #0092db;
}

.neo-brutalism-white {
  background: #fff;
  border: #d2e4ff;
  box-shadow:
    0.4vmin 0.4vmin #fff,
    0.8vmin 0.8vmin #d2e4ff,
    1vmin 1vmin #d2e4ff,
    0.55vmin 0.8vmin #d2e4ff,
    0.8vmin 0.55vmin #d2e4ff
}

/* Loading Animation */
.loader-container {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: var(--z-model-loader);
}

.loader {
  width: 60px;
  aspect-ratio: .5;
  display: grid;
  position: relative;
}
.loader:before {
  content: "";
  width: 30%;
  aspect-ratio: 1;
  border-radius: 50%;
  margin: auto auto 0;
  background: #CF4647;
  animation: l9-0 .5s cubic-bezier(0,800,1,800) infinite;
}
.loader:after {
  content: "";
  width: 100%;
  aspect-ratio: 1/cos(30deg);
  margin: 0 auto auto;
  clip-path: polygon(50% -50%,100% 50%,50% 150%,0 50%);
  background: #524656;
  animation: l9-1 .5s linear infinite;
}
@keyframes l9-0 {
  0%,2%  {translate: 0   0%}
  98%,to {translate: 0 -.2%}
}
@keyframes l9-1 {
  0%,5%  {rotate:  0deg}
  95%,to {rotate:-60deg}
}

/* Page Loading Animation */

.page-loader {
  --c1:#673b14;
  --c2:#f8b13b;
  width: 40px;
  height: 80px;
  border-top: 4px solid var(--c1);
  border-bottom: 4px solid var(--c1);
  background: linear-gradient(90deg, var(--c1) 2px, var(--c2) 0 5px,var(--c1) 0) 50%/7px 8px no-repeat;
  display: grid;
  overflow: hidden;
  animation: l5-0 2s infinite linear;
}
.page-loader::before,
.page-loader::after {
  content: "";
  grid-area: 1/1;
  width: 75%;
  height: calc(50% - 4px);
  margin: 0 auto;
  border: 2px solid var(--c1);
  border-top: 0;
  box-sizing: content-box;
  border-radius: 0 0 40% 40%;
  -webkit-mask: 
    linear-gradient(#000 0 0) bottom/4px 2px no-repeat,
    linear-gradient(#000 0 0);
  -webkit-mask-composite: destination-out;
          mask-composite: exclude;
  background: 
    linear-gradient(var(--d,0deg),var(--c2) 50%,#0000 0) bottom /100% 205%,
    linear-gradient(var(--c2) 0 0) center/0 100%;
  background-repeat: no-repeat;
  animation: inherit;
  animation-name: l5-1;
}
.page-loader::after {
  transform-origin: 50% calc(100% + 2px);
  transform: scaleY(-1);
  --s:3px;
  --d:180deg;
}
@keyframes l5-0 {
  80%  {transform: rotate(0)}
  100% {transform: rotate(0.5turn)}
}
@keyframes l5-1 {
  10%,70%  {background-size:100% 205%,var(--s,0) 100%}
  70%,100% {background-position: top,center}
}

/* section navbar */

.button {
  height: 40px;
  width: 100px;
  border-radius: 25px;
  cursor: pointer;
  position: absolute;
  top: 0;
  right: 0;
  overflow: hidden;
}

.section-slider {
  position: relative;
  height: 100%;
  width: 100%;
}

.el {
  height: 100%;
  width: 100%;
  background-color: #c9fd74;
  text-transform: uppercase;
}

.el:nth-of-type(2) {
  position: absolute;
  top: 100%;
  background-color: black;
  color: white;
}


.perspectiveText {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: transform 0.75s cubic-bezier(0.76, 0, 0.24, 1);
  transform-style: preserve-3d;
}

.perspectiveText p {
  transition: all 0.75s cubic-bezier(0.76, 0, 0.24, 1);
}

.perspectiveText p:nth-of-type(2) {
  position: absolute;
  transform: rotateX(-90deg) translateY(9px);
  transform-origin: bottom center;
  opacity: 0;
}

/* logo douglus nguyen */

.menu {
  position: relative;
  width: 480px;
  height: 650px;
  background-color: #c9fd74;
  border-radius: 25px;
}

.nav {
  height: 100%;
  padding: 100px 40px 50px 40px;
  box-sizing: border-box;
}

.nav-body {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.nav-body a {
  color: black;
  text-decoration: none;
  font-size: 30px;
}

.linkContainer {
  perspective: 120px;
}

.header {
  position: absolute;
  display: flex;
  bottom: 0;
  color: white;
  padding: 35px;
  justify-content: space-between;
  width: 100%;
  font-weight: 300;
  box-sizing: border-box;
  align-items: center;
}

.logo {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.logo p {
  margin: 0px;
  transition: all 0.5s cubic-bezier(0.76, 0, 0.24, 1);
}

.name {
  display: flex;
  overflow: hidden;
  white-space: nowrap;
  position: relative;
  margin-left: 5px;
  transition: all 0.5s cubic-bezier(0.76, 0, 0.24, 1);
}

.name p {
  position: relative;
  text-transform: uppercase;
  transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
}

.name p:nth-of-type(2) {
  padding-left: 0.3em;
}

.name p:nth-of-type(3) {
  position: absolute;
  left: 120px;
  padding-left: 0.3em;
}

.logo:hover .name {
  padding-right: 30px;
}

.logo:hover .name .iam {
  transform: translateX(-100%);
  transition: transform 0.4s cubic-bezier(0.76, 0, 0.24, 1) 0s;
}

.logo:hover .name .douglus {
  transform: translateX(-35px);
  transition: transform 0.4s cubic-bezier(0.76, 0, 0.24, 1) 0.1s;
}

.logo:hover .name .nguyen {
  transform: translateX(-53px);
  transition: transform 0.4s cubic-bezier(0.76, 0, 0.24, 1) 0.2s;
}

/* navbar */

.click-hint {
  position: absolute;
  right: calc(100% + 15px);
  white-space: nowrap;
  color: white;
  font-size: 25px;
  font-weight: 500;
  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
  overflow: hidden;
  border-right: 2px solid white;
  width: 0;
  animation: typewriter 2s steps(17) forwards, blinkCursor 0.9s infinite;
  animation-delay: 500ms;
}

.click-hint-desktop {
  animation: typewriter-desktop 2s steps(13) forwards, blinkCursor 0.9s infinite;
  animation-delay: 500ms;
}

.click-hint-mobile {
  animation: typewriter-mobile 2s steps(15) forwards, blinkCursor 0.9s infinite;
  animation-delay: 500ms;
}

@keyframes typewriter-desktop {
  from {
    width: 0;
  }
  to {
    width: 17ch;
  }
}

@keyframes typewriter-mobile {
  from {
    width: 0;
  }
  to {
    width: 13ch;
  }
}

@keyframes blinkCursor {
  0%, 100% {
    border-color: white;
  }
  50% {
    border-color: transparent;
  }
}

.nav-button.active .click-hint {
  display: none;
}

.burger {
  width: 100%;
}

.burger::after {
  content: "";
  display: block;
  width: 40%;
  background-color: #DCD0C2;
  height: 2px;
  margin: auto;
  position: relative;
  top: -5px;
  transition: transform 0.6s;
}

.burger::before {
  content: "";
  display: block;
  width: 40%;
  background-color: #DCD0C2;
  height: 2px;
  margin: auto;
  position: relative;
  top: 5px;
  transition: transform 0.3s;
}


.burger-active::after {
  top: -1px;
  transform: rotate(45deg)
}

.burger-active::before {
  top: 0px;
  transform: rotate(-45deg)
}

.dlous-menu {
  will-change: transform, opacity;
}

@media (max-width: 540px) {
  .dlous-menu {
    width: 100vw;
  }
}

.nav-item.active {
  color: #B1A994;
}

.footer {
  @apply pb-1 relative after:absolute after:bottom-0 after:left-0 after:bg-[#999] after:h-0.5 after:w-0 hover:after:w-full after:transition-all after:ease-in-out after:duration-300;
}

.svg-curve {
  position: absolute;
  top: 0;
  left: -99px;
  width: 100px;
  height: 100%;
  fill: #363637;
  stroke: none;
  pointer-events: none;
}

.landing {
  position: relative;
  height: 100vh;
  overflow: hidden;
}

.landing-slider-container {
  position: absolute;
  top: calc(100vh - 350px);
}

.landing-image {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  filter: brightness(0.95);
}

.landing-image-lite {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.landing-image-container {
  position: relative;
  width: 100%;
  height: 100%;
}

.landing-image-container::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.2);
}

.landing-slider {
  position: relative;
  white-space: nowrap;
}

.landing-slider p {
  position: relative;
  margin: 0px;
  color: white;
  font-size: 195px;
  font-weight: 500;
  padding-right: 50px;
}

.landing-slider p:nth-of-type(2) {
  position: absolute;
  left: 100%;
  top: 0;
}

.indicator {
  width: 6px;
  height: 6px;
  background-color: white;
  position: absolute;
  border-radius: 50%;
  transform: scale(0) translateX(-50%);
  transition: transform 0.2s cubic-bezier(0.76, 0, 0.24, 1)
}

.landing-icon:hover .indicator {
  transform: scale(1) translateX(-50%);
}

/* about */

.info {
  @apply text-[18px] text-[#3c3d37] border-t-[1px] border-[#B1A994] pt-[20px] pb-[50px];
}

.info-details {
  @apply w-full text-[18px] text-[#3c3d37] ;
}

.info-contact {
  @apply text-[12px] font-normal tracking-[0.1em] text-gray-600;
}

/* Loading progress bar */

.number {
  height: 80px;
  overflow: hidden;
}

.number-1 .number-wrap {
  transform: translateY(100%);
}

.number-wrap {
  display: flex;
  flex-direction: column;
  will-change: transform;
}

.number-wrap span {
  height: 80px;
  line-height: 80px;
  font-size: 72px;
  font-weight: bold;
}

.percentage {
  font-size: 30px;
  margin-left: 4px;
  align-self: start;
}

.number-2 .number-wrap,
.number-3 .number-wrap {
  height: 800px;
}

.number-1 .number-wrap {
  height: 80px;
}

/* Gear animation */

.gear-1 {
  transform-origin: 338.19752502441406px 341.43104553222656px;
  animation: rotateClockwise 5s linear infinite;
}

.gear-2 {
  transform-origin: 132.86651825904846px 129.62977190117817px;
  animation: rotateCounterClockwise 5s linear infinite;
}

@keyframes rotateClockwise {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

@keyframes rotateCounterClockwise {
  from { transform: rotate(0deg); }
  to { transform: rotate(-360deg); }
}

